<resources>
    <string name="app_name">BrawlKat</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- broadcast message -->
    <!--    <string name="check_start">-->
    <!--        com.keykat.keykat.brawlkat.service.systembarservice.BrawlStarsNotificationService.CHECK_START-->
    <!--    </string>-->
    <!--    <string name="check_end">-->
    <!--        com.keykat.keykat.brawlkat.service.systembarservice.BrawlStarsNotificationService.CHECK_END-->
    <!--    </string>-->
    <!--    <string name="screen_on">android.intent.action.SCREEN_ON</string>-->
    <!--    <string name="screen_off">android.intent.action.SCREEN_OFF</string>-->
    <!--    <string name="appName">brawlstar</string>-->

    <string name="overdrawErrorMessage">
        something wrong with datas or maybe lack of data!" + '\n'
        + "we are sorry for the inconveniences.
    </string>


    <!-- Preference Titles -->
    <string name="notify_header">알림</string>
    <string name="info_header">정보</string>

    <!-- Preference Key -->
    <string name="notify_service">notify_service</string>
    <string name="auto_service">auto_service</string>
    <string name="service">service</string>
    <string name="policy">policy</string>
    <string name="developer">developer</string>

    <!-- Messages Preferences -->
    <string name="notify">알림창에 브롤러 정보 표시하기</string>
    <string name="app_info">서비스 설명</string>
    <string name="official_policy_info">정책</string>
    <string name="developer_info">개발자 정보</string>

    <!-- Message Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="notify_summary_on">
        디바이스의 알림창에 브롤러 정보가 표시됩니다. 아래에서 자세한 설명을 확인할 수 있습니다.
    </string>
    <string name="notify_summary_off">
        디바이스의 알림창에 브롤러 정보가 표시됩니다.  아래에서 자세한 설명을 확인할 수 있습니다.
    </string>
    <string name="service_summary">"알림창에 브롤러 정보 표시하기"에 대한 설명입니다.</string>
    <string name="policy_summary">브롤스타즈 개발사 supercell의 정책과 그 외의 정책에 대한 설명입니다.</string>
    <string name="developer_summary">개발자의 이메일 등에 대한 정보입니다.</string>
    <string name="service_summary_fragment1">내 정보를 간단하게 확인할 수 있어요!</string>
    <string name="service_summary_fragment2">어떤 브롤러로 플레이할지 고민이 된다면 펼쳐보세요!</string>
    <string name="service_summary_fragment3">알림창의 통계 버튼을 눌러 어떤 맵에서 어떤 브롤러가 좋은지 확인하세요!</string>

    <!-- supercell Policy -->
    <string name="supercell_policy_title">Supercell Policy</string>
    <string name="supercell_policy_subtitle">FAN CONTENT POLICY</string>
    <string name="supercell_policy_content">
        This content is not affiliated with, endorsed, sponsored, or specifically approved
        by Supercell and Supercell is not responsible for it.
        For more information see Supercell’s Fan Content Policy.
    </string>
    <string name="policy_link_pattern">Supercell’s Fan Content Policy.</string>
    <string name="policy_link">https://supercell.com/en/fan-content-policy/</string>

    <string name="supercell_policy_title_korean">슈퍼셀 정책</string>
    <string name="supercell_policy_subtitle_korean">팬 콘텐츠 정책</string>
    <string name="supercell_policy_content_korean">
        해당 자료는 비공식적이며 슈퍼셀에 의해 승인되지 않았습니다.
        더 자세한 정보는 슈퍼셀 팬 콘텐츠 정책을 참조해 주시기 바랍니다.
    </string>
    <string name="policy_link_pattern_korean">팬 콘텐츠 정책</string>
    <string name="policy_link_korean">https://supercell.com/en/fan-content-policy/ko</string>


    <!-- developer information -->
    <string name="dev_title">개발자 정보</string>
    <string name="dev_name_title">개발자 Developer</string>
    <string name="dev_name">keykat</string>
    <string name="dev_email_title">개발자 이메일 Developer\'s e-mail</string>
    <string name="dev_email">koin20000@gmail.com</string>
    <string name="dev_blog_title">개발자 블로그 Developer\'s blog</string>
    <string name="dev_blog">https://keykat7.blogspot.com</string>


    <!--Service-->
    <string name="playerChange">My</string>
    <string name="allChange">All</string>
    <string name="dialog_player_not_found_title">플레이어를 찾을 수 없습니다.</string>
    <string name="dialog_club_not_found_title">클럽을 찾을 수 없습니다.</string>
    <string name="dialog_player_not_found_description">없는 플레이어거나 일시적인 문제입니다. 다시 시도해보세요.</string>
    <string name="dialog_club_not_found_description">없는 클럽이거나 일시적인 문제입니다. 다시 시도해보세요.</string>


    <!--common-->
    <string name="common_ok">확인</string>
    <string name="account_save_error_text">계정 태그에는 영문자 또는 숫자만 포함될 수 있습니다.</string>
    <string name="sharedPreferenceKey">ACCOUNT_SHARED_PREFERENCE_KEY</string>
</resources>

