<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notify_header">

        <SwitchPreferenceCompat
            app:key="notify_service"
            app:summaryOff="@string/notify_summary_off"
            app:summaryOn="@string/notify_summary_on"
            app:title="@string/notify" />

        <SwitchPreferenceCompat
            app:key="auto_service"
            app:summaryOff="@string/auto_summary_off"
            app:summaryOn="@string/auto_summary_on"
            app:title="@string/auto_start" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/info_header">

        <EditTextPreference
            app:key="service"
            app:title="@string/app_info"/>

        <EditTextPreference
            app:key="policy"
            app:title="@string/official_policy_info"/>

        <EditTextPreference
            app:key="developer"
            app:title="@string/developer_info"/>

    </PreferenceCategory>

</PreferenceScreen>