<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:layout_marginBottom="30dp"
            android:text="@string/dev_title"
            android:textColor="@color/colorWhite"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/dev_name_title"
            android:textColor="@color/Color1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/dev_name"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/dev_email_title"
            android:textColor="@color/Color1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/dev_email"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/dev_blog_title"
            android:textColor="@color/Color1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/dev_blog"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>